syntax="proto3";

package calculator;

message SumRequest{
    int32 first = 1;
    int32 second = 2;
}

message SumResponse{
    int32 result = 3;
}

message AvgRequest{
    int32 number = 1;
}

message AvgResponse{
    double result = 1;
}

message DecomposeRequest{
    int32 prime =1;
}

message DecomposeResponse{
    int32 result =1;
}

message MaxRequest{
    int32 number = 1;
}

message MaxResponse{
    int32 result = 1;
}

service CalculatorService{
    rpc Sum(SumRequest) returns (SumResponse){};

    rpc Decompose(DecomposeRequest) returns (stream DecomposeResponse){};

    rpc Average(stream AvgRequest) returns (AvgResponse){};

    rpc Maximum(stream MaxRequest) returns (stream MaxResponse){};
}